--- a/src/client/index.html
+++ b/src/client/index.html
@@ -18,10 +18,11 @@
                     <span class="labelInfo">手机号:</span> <input type="text" name="PhNos" />
                     </p>
                     <p>
-                    <button>提交</button>
+                    <a href="javascript:void(0)" class="button button_s">提交</a>
                     </p>
                     <p>
-                    <a href="callto:15902964520">客服电话</a>
+                    <a class="button button_s" href="javascript:void(0)">立即预约</a>
+                    <a class ="button button_s" href="tel:15902964520">客服电话</a>
                     </p>
                 </form> 
             </div>
